UI and jhiTranslate edited

--- a/src/main/webapp/i18n/by/home.json
+++ b/src/main/webapp/i18n/by/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "Сардэчна запрашаем, Java Hipster!",
+    "title": "Сардэчна запрашаем на прылажэнне лiнтар, сазданае Ганнай!",
     "subtitle": "Гэта ваша дамашняя старонка",
     "logged": {
       "message": "Вы ўвайшлі як карыстальнік \"{{username}}\"."
